--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -1,8 +1,15 @@
 name: hello-world
 on: push
+ branches:
+      - master
+permissions:
+  contents: read
 jobs:
   my-job:
     runs-on: ubuntu-latest
     steps:
-      - name: my-step
-        run: echo "Hello World!"
+      - uses: actions/checkout@v2
+      - name: Install modules
+        run: npm
+      - name: Run ESLint
+        run: eslint . --ext .js,.jsx,.ts,.tsx,.vue
