--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -1,11 +1,14 @@
 name: CI
-on: push
+on: [push,pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Install modules
-      run: yarn
+    - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
+      with:
+        node-version: 16
+    - run: npm ci
+    - run: npm install
     - name: Run ESLint
-      run: eslint . --ext .js,.jsx,.ts,.tsx,.vue
+      run: npm run lint
