--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -1,7 +1,8 @@
 name: CI
 on: [push,pull_request]
 jobs:
-  build:
+  eclint:
+    name: runner / eclint
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -12,3 +13,9 @@ jobs:
     - run: npm install
     - name: Run ESLint
       run: npm run lint
+    - name: eclint
+      uses: reviewdog/action-eclint@v1
+      with:
+        github_token: ${{ secrets.github_token }}
+        reporter: github-pr-review # Change reporter.
+        eclint_flags: 'src/'
