--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -8,13 +8,17 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
       with:
-        node-version: 16
+        node-version: [14,16]
     - run: npm ci
     - run: npm install
     - name: Run ESLint
       run: npm run lint
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '14'
+    - run: yarn install
     - uses: reviewdog/action-eslint@v1
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          reporter: github-pr-review
-          eslint_flags: 'src/'
+      with:
+        reporter: github-check
+        eslint_flags: 'src/'
+
