--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -2,7 +2,7 @@ name: CI
 on: [push,pull_request]
 jobs:
   eslint:
-    name: runner / eclint
+    name: runner / eslint
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -18,4 +18,3 @@ jobs:
         eslint_flags: 'src/'
     - name: Run ESLint
       run: npm run lint
-
