--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -1,5 +1,5 @@
 name: CI
-on: [push,pull_request]
+on: pull_request
 jobs:
   eslint:
     name: runner / eslint
@@ -8,7 +8,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
       with:
-        node-version: 14
+        node-version: "14"
     - run: npm ci
     - run: npm install
     - uses: reviewdog/action-eslint@v1
@@ -16,5 +16,5 @@ jobs:
         github_token: ${{ secrets.GITHUBTOKEN }}
         reporter: github-pr-review # Change reporter.
         eslint_flags: 'src/'
-    - name: Run ESLint
-      run: npm run lint
+    # - name: Run ESLint
+    #   run: npm run lint
