--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -1,20 +1,16 @@
-name: CI
+name: reviewdog
 on: pull_request
 jobs:
   eslint:
     name: runner / eslint
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v2
-      with:
-        node-version: "14"
-    - run: npm ci
-    - run: npm install
-    - uses: reviewdog/action-eslint@v1
-      with:
-        github_token: ${{ secrets.GITHUBTOKEN }}
-        reporter: github-pr-review # Change reporter.
-        eslint_flags: 'src/'
-    # - name: Run ESLint
-    #   run: npm run lint
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "14"
+      - run: yarn install
+      - uses: reviewdog/action-eslint@v1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          reporter: github-pr-review # Change reporter.
