--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -1,5 +1,7 @@
 name: reviewdog
-on: pull_request
+on:
+  push:
+  pull_request:
 jobs:
   eslint:
     name: runner / eslint
@@ -14,3 +16,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           reporter: github-pr-review # Change reporter.
+      - run: yarn lint
