--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -14,6 +14,6 @@ jobs:
       - run: yarn install
       - uses: reviewdog/action-eslint@v1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          # github_token: ${{ secrets.GITHUB_TOKEN }}
           reporter: github-pr-review # Change reporter.
       - run: yarn lint
