--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -12,6 +12,10 @@ jobs:
         with:
           node-version: "14"
       - run: yarn install
+      - name: setup review cho
+        uses: reviewdog/action-setup@v1
+      - run: reviewdog -version
+      - name: check lint
       - uses: reviewdog/action-eslint@v1
         with:
           # github_token: ${{ secrets.GITHUB_TOKEN }}
